fixed overlapping ui

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -41,7 +41,6 @@
 .myMessage {
     float: right;
     margin: 0 -30px 30px 200px;
-    display: inline;
     border-radius: 5%;
     padding: 0 10px 0 10px;
 }
@@ -59,7 +58,6 @@
     background-color: #a39f9e;
     float: left;
     margin: 0 200px 30px 0;
-    display: inline;
     border-radius: 5%;
     padding: 0 10px 0 10px;
 }
